views: lay out focus ring on app menu button properly

When using the new animated app menu icon, it's necessary to call View::Layout
so that the focus ring is properly laid out.

Bug: 859642
Change-Id: Icb2d39d0fa3f254fb996899f8d2fb8c0ad011c7e
Reviewed-on: https://chromium-review.googlesource.com/1127926
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Peter Kasting <pkasting@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573047}
Former-commit-id: ef462db922cc93016f1482433c26cf0479dd86aa